# kaparoo-python

./: .copier-answers.yml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  conftest.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
kaparoo/data/: README.md  __init__.py  files.py  sequence.py  utils.py
kaparoo/data/files/: base.py
kaparoo/data/sequence/: __init__.py  base.py  composers.py  templates.py  utils.py
kaparoo/data/sequences/: __init__.py  base.py  composers.py  templates.py  utils.py
kaparoo/filesystem/: README.md  __init__.py  atomic.py  collections.py  directory.py  exceptions.py  exclude.py  existence.py  search.py  staged.py  temporary.py  types.py  units.py  utils.py
kaparoo/filesystem/hierarchy/: README.md  __init__.py  base.py  compare.py  conditions.py  entry.py  group.py  locate.py  match.py  nodes.py  patterns.py  scaffold.py  utils.py  validate.py
kaparoo/filesystem/hierarchy/traverse/: __init__.py  _utils.py  _walk.py  locate.py  validate.py
kaparoo/filesystem/search/: README.md  __init__.py  _classes.py  _impl.py  _public.py  _wrappers.py  classes.py  deprecated.py  filters.py  wrappers.py
kaparoo/filesystem/search/filters/: __init__.py  base.py  logical.py  multi_pattern.py  pattern.py  typed.py  types.py  utils.py
kaparoo/filters/: README.md  __init__.py  base.py  enumerable.py  logical.py  multi_pattern.py  pattern.py  types.py  utils.py
kaparoo/utils/: README.md  __init__.py  aggregate.py  checks.py  optional.py  singleton.py  timer.py  types.py
tests/: conftest.py
tests/data/: helpers.py  test_composers.py  test_sources.py  test_utils.py
tests/data/sequence/: test_base.py  test_composers.py  test_templates.py
tests/data/sequences/: helpers.py  test_base.py  test_composers.py  test_templates.py  test_utils.py
tests/filesystem/: helpers.py  test_atomic.py  test_directory.py  test_exceptions.py  test_exclude.py  test_existence.py  test_filters.py  test_staged.py  test_temporary.py  test_units.py  test_utils.py  test_wrappers.py
tests/filesystem/hierarchy/: conftest.py  test_compare.py  test_conditions.py  test_entry.py  test_group.py  test_locate.py  test_match.py  test_nodes.py  test_patterns.py  test_scaffold.py  test_serialization.py  test_utils.py  test_validate.py
tests/filesystem/hierarchy/traverse/: helpers.py  test_locate.py  test_validate.py
tests/filesystem/search/: test_deprecated.py  test_filters.py  test_filters_serialization.py  test_wrappers.py
tests/filesystem/search/filters/: conftest.py  test_base.py  test_logical.py  test_multi_pattern.py  test_pattern.py  test_typed.py  test_types.py  test_utils.py
tests/filters/: conftest.py  test_base.py  test_enumerable.py  test_logical.py  test_multi_pattern.py  test_pattern.py  test_types.py  test_utils.py
tests/fixtures/: filesystem.py
tests/utils/: test_aggregate.py  test_checks.py  test_optional.py  test_singleton.py  test_timer.py
